
Refactored am.add_bibtex() to consider updated bibcodes
(arxiv to published).

*****

Implemented am.update() function to launch an ADS querry on the
bibmanager entries that have an 'adsurl' field.

*****

Fixed behavior issue in bm.filter_fields() function to truly take
new entry, when findinf duplicate fields (before it was also
requesting better publish status or different keys).

*****

Fixed indentation in bm.filter_fields() function to four spaces.

*****

Implemented am.key_update() to adjust keys of entries that were
updated from their arxiv version.
Potentially, it can be extended to all entries (I'm thinking wrong
user input in keys).
Added update_keys argument to am.add_bibtex() and am.update()
functions to indicate when to modify the keys of arxiv-updated
entries.
Added some on-screen reports of arxiv updates in am.add_bibtex().

*****

Implemented ads-search command-line interface and documentation.
Fixed a few typos in command-line function docstrings.

*****

Some tweaks to the main-help display (mostly, avoiding ANSI color
encoding).

*****

Bumped bibmanager version to 0.4.0.
This next merge closes #3


*****  Thu Jan  3 23:43:01 CLT 2019  *****

Updated copyright year all over the place.

*****

Created sphinx docs.
Drafted main structure of the docs.
Added logo.
Wrote intex.rst
Wrote getstarted.rst (quick example is TBD)
Drafted bibtex.rst, latex.rst, and ads.rst sections (need to copy info from
argparse docs, expand examples).
faq.rst sections needs a complete make over.
Need to figure out how to do/automate API docs (for api.rst).
Wrote contributing.rst and license.rst sections.
Updated README to point to docs.


*****  Sun Jan  6 13:08:42 CLT 2019  *****

Finished drafting a decent bibtex.rst docs page.

*****

Unified one-liner descriptions between main and command help menus.
Change 'bibkey' to 'key' in bibm search output.
Edit docs to refer to 'config params' rather than config keys (to
avoid confusion with the BibTeX's key).

*****
